# tvdbapi_client

./: .coveragerc  .gitignore  .landscape.yml  .travis.yml  ChangeLog  Dockerfile  Dockerfile.dev-py27  Dockerfile.dev-py34  Dockerfile.dev-py35  Makefile  README.rst  Vagrantfile  requirements.txt  setup.cfg  tasks.py  test-requirements.txt  tox.ini
dev/: fig.yml
doc/source/: conf.py  index.rst  options.rst
doc/source/api/: autoindex.rst  modules.rst  tvdbapi_client.api.rst  tvdbapi_client.options.rst  tvdbapi_client.rst  tvdbapi_client.timeutil.rst
etc/tvdbapi_client/: gen.conf  tvdbapi.conf.sample
scripts/: test.sh
tvdbapi_client/: __init__.py  api.py  exceptions.py  options.py  timeutil.py
tvdbapi_client/tests/: base.py  schema_helper.py  test_alt_api.py  test_api.py  test_options.py  test_timeutil.py
