[metadata]
name = tvdbapi_client
author = shad7
author-email = kenny.shad7@gmail.com
summary = theTVDB API Client (json)
license = MIT
keywords = tv, espisode
description-file =
    README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Other Environment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet
    Topic :: Multimedia
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    tvdbapi_client
data_files =
    etc/tvdbapi_client = etc/tvdbapi_client/*

[entry_points]

oslo.config.opts =
    tvdbapi_client = tvdbapi_client.options:list_opts


[build_sphinx]
builders=html
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1

[pbr]
skip_authors = 1
skip_changelog = 1
autodoc_index_modules = 1
autodoc_exclude_modules =
        tvdbapi_client.tests.*

